@@ -39,8 +39,8 @@ a.about_data.quality	{border-left:1px solid rgba(187,187,187,1);}
 
 /*	Blog styles
 	============================================= */
-.blog_head			{color:rgba(255,255,255,1); border-bottom:10px solid rgba(255,255,255,1);}
-a.blog_head			{color:rgba(255,255,255,1); border-bottom:10px solid rgba(255,255,255,1);}
+.blog_head			{color:rgba(255,255,255,1); border-bottom:1px solid rgba(255,255,255,1);}
+a.blog_head			{color:rgba(255,255,255,1); border-bottom:1px solid rgba(255,255,255,1);}
 .blog_wrap			{color:rgba(255,255,255,1); border-bottom:1px solid rgba(255,255,255,1); background-color:rgba(255,255,255,0.1);}
 .blog_date			{color:rgba(204,204,204,1);}
 .blog_body a		{color:rgba(204,204,204,1);}
@@ -73,7 +73,10 @@ a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,
 .map_info				{color:rgba(255,255,255,1); background-color:rgba(93,93,93,0.9);}
 .map_no_info			{color:rgba(255,255,255,1);}
 a.map_percent			{color:rgba(255,255,255,1); background-color:rgba(93,93,93,0.9);}
+a.map_percent:hover		{background-color:rgba(0,0,0,0.8);}
 a.map_percent span		{color:rgba(255,255,255,1);}
+.map_filter				{color:#444;}
+.map_filter.info		{color:#fff;}
 
 
 /*	For url #view=map
@@ -114,21 +117,20 @@ a.read:hover			{color:rgba(255,255,255,1);}
 /*	Generic styles
 	============================================= */
 .list_peak					{border-right:30px solid rgba(130,130,130,1);}
-.list_head_title			{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
+.list_head_title			{color:rgba(255,255,255,1);}
 .list_stats_title			{color:rgba(255,255,255,1);}
 .list_stats_num				{color:rgba(255,255,255,1);}
 a.button					{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
 a.button:hover				{background-color:rgba(158,158,158,1);}
-a.csv_download				{background-color:rgba(192,192,192,0.24); color:rgba(204,204,204,1);}
-a.csv_download:hover		{background-color:rgba(184,184,184,0.49); color:rgba(255,255,255,1);}
+a.csv_download				{background-color:rgba(192,192,192,0.7); color:rgba(255,255,255,1);}
+a.csv_download:hover		{background-color:rgba(184,184,184,0.5); color:rgba(255,255,255,1);}
 
 	
 /*	For url #view=donors & all #view=donor_*
 	============================================= */
 .donors_peak				{border-right:30px solid rgba(130,130,130,1);}
 .donors_peak.view			{border-right:30px solid rgba(130,130,130,1);}
-.donors_head_title			{background-color:rgba(130,130,130,1); color:rgba(255,255,255,1);}
-.donors_head_title.view		{background-color:rgba(130,130,130,1);}
+.donors_head_title			{color:rgba(255,255,255,1);}
 
 
 /*	For url #view=donor_activities
@@ -141,7 +143,7 @@ a.csv_download:hover		{background-color:rgba(184,184,184,0.49); color:rgba(255,2
 /*	For url #view=sectors & all #view=sector_*
 	============================================= */
 .sectors_peak				{border-right:30px solid rgba(107,107,107,1);}
-.sectors_head_title			{background-color:rgba(107,107,107,1); color:rgba(255,255,255,1);}
+.sectors_head_title			{color:rgba(255,255,255,1);}
 
 
 /*	Table header styles
@@ -156,21 +158,20 @@ table.head td.options		{color:rgba(255,255,255,1);}
 
 /*	Table for Country Name and Flag
 	============================================= */
-table.country				{border-bottom:10px solid rgba(255,255,255,1);}
+table.country				{border-bottom:1px solid rgba(255,255,255,1);}
 table.country td.name		{color:rgba(255,255,255,1);}
 table.country.min td.name	{color:rgba(255,255,255,1);}
 
 
 /*	Table Titles
 	============================================= */
-table.title				{border-bottom:10px solid rgba(255,255,255,1);}
 table.title td			{color:rgba(255,255,255,1);}
 table.title td.sort		{color:rgba(204,204,204,1);}
 
 
 /*	Table for Active / Ended projects
 	============================================= */
-table.list td			{color:rgba(198,198,198,1); border-bottom:1px solid rgba(56,56,56,1);}
+table.list td			{color:rgba(198,198,198,1);}
 table.list td span		{color:rgba(153,153,153,1);}
 table.list a			{color:rgba(204,204,204,1);}
 table.list a:focus		{color:rgba(255,255,255,1);}
@@ -193,12 +194,13 @@ table.money td.col7			{background-color:rgba(74,74,74,0.6);}
 table.money tr.row1 th		{color:rgba(255,255,255,1);}
 table.money tr.row1 th span	{color:rgba(255,255,255,1);}
 table.money tr.row1 th.col1	{background-color:rgba(70,70,70,0.9); border:1px solid rgba(68,68,68,1); border-bottom:1px solid rgba(141,141,141,1);}
-table.money tr.row1 th.col2	{border-bottom:1px solid rgba(141,141,141,1); border-top:1px solid rgba(67,67,67,1);}
+table.money tr.row1 th.col2	{background-color:rgba(70,70,70,0.3);border-bottom:1px solid rgba(141,141,141,1); border-top:1px solid rgba(67,67,67,1);}
 table.money tr.row1 th.col3	{background-color:rgba(56,56,56,0.9); border:1px solid rgba(67,67,67,1); border-bottom:1px solid rgba(141,141,141,1);}
 table.money tr.row1 th.col4	{background-color:rgba(74,74,74,0.9); border:1px solid rgba(82,82,82,1); border-bottom:1px solid rgba(141,141,141,1);}
 
 table.money tr.row2 td		{color:rgba(255,255,255,1);}
 table.money tr.row2 td.col1 {background-color:rgba(70,70,70,0.9); border-left:1px solid rgba(68,68,68,1); border-right:1px solid rgba(68,68,68, 1);}
+table.money tr.row2 td.col2 {background-color:rgba(56,56,56,0.3);}
 table.money tr.row2 td.col3	{background-color:rgba(56,56,56,0.6); border-left:1px solid rgba(67,67,67,1);}
 table.money tr.row2 td.col4	{background-color:rgba(56,56,56,0.8);}
 table.money tr.row2 td.col5	{background-color:rgba(56,56,56,0.9); border-right:1px solid rgba(67,67,67,1);}
@@ -237,7 +239,7 @@ table.activity a		{color:rgba(204,204,204,1);}
 table.activity a:focus	{color:rgba(255,255,255,1);}
 table.activity a:link  	{color:rgba(204,204,204,1);}
 table.activity a:visited{color:rgba(204,204,204,1);}
-table.activity a:hover	{color:rgba(255,255,255,1); background-color:rgba(0,0,0,0.4);}
+table.activity a:hover	{color:rgba(255,255,255,1);}
 table.activity a:active	{color:rgba(204,204,204,1);}
 
 
@@ -287,10 +289,14 @@ iati-identifier:before			{color:rgba(204,204,204,1);}
 iati-identifier:hover			{color:rgba(255,255,255,1);}
 a.a_xml_iati-identifier:before	{color:rgba(204,204,204,1);}
 a.a_slug:before					{color:rgba(204,204,204,1);}
-a.a_xml_iati-identifier			{color:rgba(173,173,173,1);}
-a.a_slug						{color:rgba(173,173,173,1);}
+a.a_xml_iati-identifier:link	{color:rgba(173,173,173,1);}
+a.a_xml_iati-identifier:visited	{color:rgba(173,173,173,1);}
 a.a_xml_iati-identifier:hover	{color:rgba(255,255,255,1);}
+a.a_xml_iati-identifier:active	{color:rgba(173,173,173,1);}
+a.a_slug:link					{color:rgba(173,173,173,1);}
+a.a_slug:visited				{color:rgba(173,173,173,1);}
 a.a_slug:hover					{color:rgba(255,255,255,1);}
+a.a_slug:active					{color:rgba(173,173,173,1);}
 
 
 /*	Recipient countries
@@ -348,11 +354,15 @@ result description:before	{color:rgba(204,204,204,1);}
 result span-title			{color:rgba(255,255,255,1);}
 result span-title:before	{color:rgba(204,204,204,1);}
 
-result indicator span-title	{border-top:1px solid rgba(255,255,255,1);}
 result indicator period period-start, result indicator period period-end, result indicator period target, result indicator period actual,
 result indicator description			{color:rgba(255,255,255,1);}
 result indicator period period-start:before, result indicator period period-end:before, result indicator period target:before,
 result indicator period actual:before	{color:rgba(204,204,204,1);}
+
+result indicator period target					{background-color:rgba(95,95,95,0.5);}
+result indicator period actual					{background-color:rgba(160,160,160,0.5);}
+result indicator period actual.value-higher		{background-color:rgba(190,190,190,0.5);}
+result indicator period actual.value-lower		{background-color:rgba(113,113,113,0.5);}
 
 result indicator > baseline comment	{color:rgba(255,255,255,1);}
 
@@ -396,8 +406,12 @@ planned-disbursement value 			{color:rgba(255,255,255,1);}
 /*	Transaction table
 	============================================= */
 transaction							{border-top:1px solid rgba(86,86,86,1);}
+transaction a						{font-weight:bold; color:rgba(125,125,125,1);}
 transaction a						{color:rgba(125,125,125,1);}
+transaction a:link					{color:rgba(125,125,125,1);}
+transaction a:visited				{color:rgba(125,125,125,1);}
 transaction a:hover					{color:rgba(173,173,173,1);}
+transaction a:active				{color:rgba(125,125,125,1);}
 transaction:last-of-type			{border-bottom:1px solid rgba(86,86,86,1);}
 transaction:nth-of-type(1):before	{color:rgba(255,255,255,1); background-color:rgba(56,56,56,0.9);}
 
