@@ -50,7 +50,7 @@ Please select <b>ONE</b> recipient and <b>NO</b> publisher to generate content h
 <div id="generator_aid_div" style="display:none;" >
 <span class="opt">IATI-ID</span>
 <input type="text" id="generator_aid" class="chosen" value="" />
-<span class="txt">Enter an IATI Identifier to display a single activity <b>OR</b></span>
+<span class="txt">Enter an IATI Identifier to display a single activity <br/><b>OR</b></span>
 </div>
 
 <div id="generator_limit_div" style="display:none;" >
@@ -280,6 +280,6 @@ a.view:hover span.overtxt	{display:block; position:absolute; top:0; left:0; widt
 
 .instruct_rel		{position:relative;}
 span.drop_arrow		{display:block; width:20px; height:100%; background:url(/art/chosen-sprite.png) no-repeat 0 2px; text-align:right; position:absolute; left:595px; top:15px; z-index:999; pointer-events:none;}
-span.drop_arrow.b	{left:393px;}
+span.drop_arrow.b	{left:385px;}
 
 div#generator_maxheight_dropdown_chosen	{margin-left:113px;}
