@@ -3,6 +3,8 @@ Development Portal (2017-06-19 shi)
 Fixed input font color for generator
 Fixed margin bug for generator
 Fixed grey rgba css
+Fixed generator input bug for Firefox
+Fixed generator dropdown arrow
 
 
 Development Portal (2017-06-16 shi)
